--- a/front-end/src/User/Register.css
+++ b/front-end/src/User/Register.css
@@ -1,7 +1,7 @@
 .regisWrapper{
     background-color: grey;
     margin: auto;
-    padding: 10px 100px 10px 100px;
+    padding: 10%;
     border-radius: 20px;
 }
 
