--- a/front-end/src/User/Login.css
+++ b/front-end/src/User/Login.css
@@ -1,7 +1,7 @@
 .loginWrapper{
     background-color: grey;
     margin: auto;
-    padding: 10px 100px 10px 100px;
+    padding: 10%;
     border-radius: 20px;
 }
 
